# mx5000tools-revo

./: .gitignore  Makefile.am  README  configure.ac
libmx5000/: Makefile.am  hidraw_lib.c  hidraw_lib.h  mx5000.c  mx5000.h  mx5000image.c  mx5000screencontent.c  mx5000screencontent.h
mx5000-tool/: mx5000-tool.c
mx5000tools/: BUILD.md  README  configure.ac
mx5000tools/libmx5000/: mx5000.c
